--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
@@ -29,5 +30,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
